opam-version: "1.2"
maintainer: "anders@fugmann.net"
authors: [ "Anders Fugmann" ]
license: "BSD-3"
homepage: "https://github.com/andersfugmann/aws-s3"
dev-repo: "git@github.com/andersfugmann/aws-s3"
bug-reports: "https://github.com/andersfugmann/aws-s3/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]

depends: [
  "jbuilder" { build }
  "core { >= 0.9}"
  "async"
  "async-extended"
  "ounit"
  "cohttp-async"
  "ocaml-inifiles"
  "cryptokit"
  "nocrypto"
  "yojson"
  "ppx_deriving_yojson"
  "xml-light"
]
