opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
license: "BSD-3"
homepage: "https://github.com/andersfugmann/aws-s3"
dev-repo: "git+https://github.com/andersfugmann/aws-s3"
bug-reports: "https://github.com/andersfugmann/aws-s3/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
version: "3.1.0"
depends: [
  "jbuilder" { build }
  "ounit"
  "cohttp"
  "ocaml-inifiles"
  "digestif" { >= "0.6" }
  "ptime"
  "xml-light"
  "yojson"
  "ppx_protocol_conv_xml_light"
  "ppx_protocol_conv_json"
  "cmdliner"
]

available: [ ocaml-version >= "4.05.0" ]
