opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
license: "BSD-3"
homepage: "https://github.com/andersfugmann/aws-s3"
dev-repo: "git+https://github.com/andersfugmann/aws-s3"
bug-reports: "https://github.com/andersfugmann/aws-s3/issues"
version: "3.0.0"
depends: [
  "base" { = "v0.9.4" }
  "core" { = "v0.9.2" }
  "aws-s3-lwt" { = "3.0.0" }
  "aws-s3-async" { = "3.0.0" }
]
