opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
license: "BSD-3"
homepage: "https://github.com/andersfugmann/aws-s3"
dev-repo: "git+https://github.com/andersfugmann/aws-s3"
bug-reports: "https://github.com/andersfugmann/aws-s3/issues"
depends: [
  "base" { = "v0.9.4" }
  "core" { = "v0.9.2"}
  "aws-s3-lwt"
  "aws-s3-async"
]
