(library
 (name        aws_s3)
 (public_name aws-s3)
 (synopsis "Amazon S3 access library")
 (libraries ptime inifiles digestif.c
            base64 uri
            ppx_protocol_conv_json
            ppx_protocol_conv_xmlm str)
 (preprocess (pps ppx_inline_test ppx_protocol_conv))
 (inline_tests)
)
